--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,60 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
+    ext {
+        versions = [
+                code       : 1,
+                name       : '1.0',
+                minSdk     : 19,
+                targetSdk  : 31,
+                buildTools : '31.0.0',
+                gradle     : '7.1.3',
+                hilt       : "2.39.1",
+                butterknife: '10.2.3',
+                eventbus   : '3.0.0'
+        ]
+
+        libs = [
+                sdk                      : project(':luban.sdk'),
+                aidl                     : project(':luban.aidl'),
+                abs                      : project(':luban.infrastructure.abs'),
+                client                   : project(':luban.infrastructure.client'),
+                crash                    : project(':luban.infrastructure.crash'),
+                loging                   : project(':luban.infrastructure.log'),
+                common                   : project(':luban.plugin.common'),
+                floating                 : project(':luban.plugin.floating'),
+                ip                       : project(':luban.plugin.ip'),
+                log                      : project(':luban.plugin.log'),
+                op                       : project(':luban.plugin.op'),
+                logcat                   : project(':luban.plugin.logcat'),
+
+                inject                   : 'javax.inject:javax.inject:1',
+                recyclerview             : 'androidx.recyclerview:recyclerview:1.2.1',
+                appcompat                : 'androidx.appcompat:appcompat:1.4.1',
+                supportv4                : 'androidx.legacy:legacy-support-v4:1.0.0',
+                annotations              : 'androidx.annotation:annotation:1.3.0',
+
+                stetho                   : 'com.facebook.stetho:stetho:1.5.0',
+                leakcanary               : 'com.squareup.leakcanary:leakcanary-android:2.9.1',
+                leakcanarydebug          : 'com.squareup.leakcanary:leakcanary-android:1.5.1',
+                leakcanarydebugMemoryLeak: 'com.squareup.leakcanary:leakcanary-android:1.5.1',
+
+                butterknifecompiler      : "com.jakewharton:butterknife-compiler:$versions.butterknife",
+
+                rxjava                   : 'io.reactivex.rxjava2:rxjava:2.1.0',
+                rxandroid                : 'io.reactivex.rxjava2:rxandroid:2.0.1',
+                butterknife              : "com.jakewharton:butterknife:$versions.butterknife",
+                eventbus                 : "org.greenrobot:eventbus:$versions.eventbus",
+                logger                   : "com.orhanobut:logger:2.1.1"
+        ]
+    }
+
     repositories {
         jcenter()
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.1.3'
+        classpath "com.android.tools.build:gradle:$versions.gradle"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$versions.hilt"
         classpath 'com.jakewharton:butterknife-gradle-plugin:10.2.3'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -18,58 +66,6 @@ allprojects {
         jcenter()
         google()
     }
-}
-
-ext {
-    versions = [
-            code: 1,
-            name: '1.0',
-            minSdk: 19,
-            targetSdk: 31,
-            buildTools: '31.0.0',
-            dagger: '2.11',
-            butterknife: '10.2.3',
-            eventbus: '3.0.0'
-    ]
-
-    libs = [
-            sdk: project(':luban.sdk'),
-            aidl: project(':luban.aidl'),
-            abs: project(':luban.infrastructure.abs'),
-            client: project(':luban.infrastructure.client'),
-            crash: project(':luban.infrastructure.crash'),
-            loging: project(':luban.infrastructure.log'),
-            common: project(':luban.plugin.common'),
-            floating: project(':luban.plugin.floating'),
-            ip: project(':luban.plugin.ip'),
-            log: project(':luban.plugin.log'),
-            op: project(':luban.plugin.op'),
-            logcat: project(':luban.plugin.logcat'),
-
-            inject: 'javax.inject:javax.inject:1',
-            recyclerview:'androidx.recyclerview:recyclerview:1.2.1',
-            appcompat: 'androidx.appcompat:appcompat:1.4.1',
-            supportv4: 'androidx.legacy:legacy-support-v4:1.0.0',
-            annotations: 'androidx.annotation:annotation:1.3.0',
-
-            stetho: 'com.facebook.stetho:stetho:1.5.0',
-            leakcanary: 'com.squareup.leakcanary:leakcanary-android:2.9.1',
-            leakcanarydebug: 'com.squareup.leakcanary:leakcanary-android:1.5.1',
-            leakcanarydebugMemoryLeak: 'com.squareup.leakcanary:leakcanary-android:1.5.1',
-
-            daggerandroid: "com.google.dagger:dagger-android:$versions.dagger",
-            daggersupport: "com.google.dagger:dagger-android-support:$versions.dagger",
-            daggerprocessor: "com.google.dagger:dagger-android-processor:$versions.dagger",
-            dagger: "com.google.dagger:dagger:$versions.dagger",
-            daggercompiler: "com.google.dagger:dagger-compiler:$versions.dagger",
-            butterknifecompiler: "com.jakewharton:butterknife-compiler:$versions.butterknife",
-
-            rxjava: 'io.reactivex.rxjava2:rxjava:2.1.0',
-            rxandroid: 'io.reactivex.rxjava2:rxandroid:2.0.1',
-            butterknife: "com.jakewharton:butterknife:$versions.butterknife",
-            eventbus: "org.greenrobot:eventbus:$versions.eventbus",
-            logger: "com.orhanobut:logger:2.1.1"
-    ]
 }
 
 task clean(type: Delete) {
