--- a/luban.host/build.gradle
+++ b/luban.host/build.gradle
@@ -2,6 +2,7 @@ import java.text.SimpleDateFormat
 
 apply plugin: 'com.android.application'
 apply plugin: 'checkstyle'
+apply plugin: 'dagger.hilt.android.plugin'
 
 def gitSha() {
     return 'git rev-parse --short HEAD'.execute().text.trim()
@@ -45,6 +46,9 @@ android {
 }
 
 dependencies {
+    implementation "com.google.dagger:hilt-android:$versions.hilt"
+    annotationProcessor "com.google.dagger:hilt-android-compiler:$versions.hilt"
+
     implementation libs.aidl
     implementation libs.abs
     implementation libs.client
@@ -59,11 +63,6 @@ dependencies {
     implementation libs.logcat
 
     annotationProcessor libs.butterknifecompiler
-    implementation libs.dagger
-    annotationProcessor libs.daggercompiler
-    implementation libs.daggerandroid
-    implementation libs.daggersupport
-    annotationProcessor libs.daggerprocessor
 
     implementation libs.appcompat
     implementation libs.supportv4
