--- a/luban.infrastructure.client/build.gradle
+++ b/luban.infrastructure.client/build.gradle
@@ -24,23 +24,16 @@ android {
 }
 
 dependencies {
+    implementation "com.google.dagger:hilt-android:$versions.hilt"
+    annotationProcessor "com.google.dagger:hilt-android-compiler:$versions.hilt"
+
     implementation libs.aidl
     implementation libs.abs
     implementation libs.common
 
-    annotationProcessor libs.daggercompiler
-    annotationProcessor libs.daggerprocessor
-    implementation 'javax.annotation:javax.annotation-api:1.3.2'
-    annotationProcessor("javax.annotation:javax.annotation-api:1.3.2")
-
-    implementation libs.dagger
-    implementation libs.daggerandroid
-
     implementation libs.eventbus
     implementation libs.rxjava
     implementation libs.rxandroid
-
-    implementation 'com.google.errorprone:error_prone_annotations:2.13.1'
 }
 
 task styleCheck(type: Checkstyle) {
