--- a/luban.infrastructure.log/build.gradle
+++ b/luban.infrastructure.log/build.gradle
@@ -24,17 +24,12 @@ android {
 }
 
 dependencies {
+    implementation "com.google.dagger:hilt-android:$versions.hilt"
+    annotationProcessor "com.google.dagger:hilt-android-compiler:$versions.hilt"
+
     implementation libs.abs
     implementation libs.common
     implementation libs.logger
-
-    annotationProcessor libs.daggercompiler
-    annotationProcessor libs.daggerprocessor
-    implementation 'javax.annotation:javax.annotation-api:1.3.2'
-    annotationProcessor("javax.annotation:javax.annotation-api:1.3.2")
-
-    implementation libs.dagger
-    implementation libs.daggerandroid
 }
 
 task styleCheck(type: Checkstyle) {
