--- a/luban.plugin.floating/build.gradle
+++ b/luban.plugin.floating/build.gradle
@@ -25,23 +25,18 @@ android {
 }
 
 dependencies {
+    implementation "com.google.dagger:hilt-android:$versions.hilt"
+    annotationProcessor "com.google.dagger:hilt-android-compiler:$versions.hilt"
+
     implementation libs.aidl
     implementation libs.abs
     implementation libs.common
-
-    annotationProcessor libs.butterknifecompiler
-    annotationProcessor libs.daggercompiler
-    annotationProcessor libs.daggerprocessor
-    implementation 'javax.annotation:javax.annotation-api:1.3.2'
-    annotationProcessor("javax.annotation:javax.annotation-api:1.3.2")
 
     implementation libs.appcompat
     implementation libs.supportv4
     implementation libs.recyclerview
 
     implementation libs.butterknife
-    implementation libs.dagger
-    implementation libs.daggerandroid
     implementation libs.eventbus
     implementation libs.rxjava
     implementation libs.rxandroid
