--- a/luban.plugin.ip/build.gradle
+++ b/luban.plugin.ip/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'checkstyle'
 apply plugin: 'com.jakewharton.butterknife'
+apply plugin: 'dagger.hilt.android.plugin'
 
 android {
     compileSdkVersion versions.targetSdk
@@ -26,29 +27,23 @@ android {
 
 
 dependencies {
+    implementation "com.google.dagger:hilt-android:$versions.hilt"
+    annotationProcessor "com.google.dagger:hilt-android-compiler:$versions.hilt"
+
     implementation libs.aidl
     implementation libs.abs
     implementation libs.common
 
     annotationProcessor libs.butterknifecompiler
-    annotationProcessor libs.daggercompiler
-    annotationProcessor libs.daggerprocessor
-    implementation 'javax.annotation:javax.annotation-api:1.3.2'
-    annotationProcessor("javax.annotation:javax.annotation-api:1.3.2")
 
     implementation libs.appcompat
     implementation libs.supportv4
     implementation libs.recyclerview
 
     implementation libs.butterknife
-    implementation libs.dagger
-    implementation libs.daggerandroid
-    implementation libs.daggersupport
     implementation libs.eventbus
     implementation libs.rxjava
     implementation libs.rxandroid
-
-    implementation 'com.google.errorprone:error_prone_annotations:2.13.1'
 }
 
 task styleCheck(type: Checkstyle) {
